--- a/views/timetable.erb
+++ b/views/timetable.erb
@@ -25,6 +25,8 @@
 <div class="title-main">
     <img src="/assets/images/titles/timetable.webp" class="title-img">
 </div>
+<div class="time-set">
+      <%# <div class="time-road"><p style="text-align: center;">スクロール</p></div> %>
       <div class="time-first">
         <div class="line nineo">9:00</div>
         <div class="line ninet"></div>
@@ -41,14 +43,14 @@
         <table class="time-table">
           <tr>
             <th class="time-nonl positionsticky"></th>
-            <td class="time-title positionsticky"><a href="/pcdoukoukai">物理講義室</a></td>
-            <td class="time-title positionsticky" ><a href="/ongakukai">講堂</a></td>
-            <td class="time-title positionsticky"><a href="/tyuuou">中央<br>ステージ</a></td>
-            <td class="time-title positionsticky">バンド</td>
-            <td class="time-title positionsticky">ルーム<br>コンサート</td>
-            <td class="time-title positionsticky"><a href="/dassyutu">2A<br>脱出ゲーム</a></td>
-            <td class="time-title positionsticky"><a href="/dassyutu">2B<br>脱出ゲーム</a></td>
-            <td class="time-title positionsticky">視聴覚室</td>
+            <td class="time-title positionsticky"><a href="/map">物理講義室</a></td>
+            <td class="time-title positionsticky" ><a href="/map">講堂</a></td>
+            <td class="time-title positionsticky"><a href="/map">中央<br>ステージ</a></td>
+            <td class="time-title positionsticky"><a href="/map">バンド</a></td>
+            <td class="time-title positionsticky"><a href="/map">ルーム<br>コンサート</a></td>
+            <td class="time-title positionsticky"><a href="/map">2A<br>脱出ゲーム</a></td>
+            <td class="time-title positionsticky"><a href="/map">2B<br>脱出ゲーム</a></td>
+            <td class="time-title positionsticky"><a href="/map">視聴覚室</a></td>
             <th class="time-nonr positionsticky"></th>
           </tr>
           <!-- 9:00 -->
@@ -747,3 +749,4 @@
           </tr>
         </table>   
       </div> 
+    </div>
