--- a/views/layout.erb
+++ b/views/layout.erb
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="/assets/css/access.css">
     <link rel="stylesheet" href="/assets/css/circle.css">
     <link rel="stylesheet" href="/assets/css/message.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
+
    
     <link rel="stylesheet" href="/assets/css/reset.css">
     <link rel="stylesheet" href="/assets/css/layout.css">
