--- a/views/timetable.erb
+++ b/views/timetable.erb
@@ -47,7 +47,7 @@
             <td class="time-title positionsticky" ><a href="/map">講堂</a></td>
             <td class="time-title positionsticky"><a href="/map">中央<br>ステージ</a></td>
             <td class="time-title positionsticky"><a href="/map">バンド</a></td>
-            <td class="time-title positionsticky"><a href="/map">ルーム<br>コンサート</a></td>
+            <td class="time-title positionsticky"><a href="/map" id="time-small">ルーム<br>コンサート<br><small>(アンサンブル部)</small></a></td>
             <td class="time-title positionsticky"><a href="/map">2A<br>脱出ゲーム</a></td>
             <td class="time-title positionsticky"><a href="/map">2B<br>脱出ゲーム</a></td>
             <td class="time-title positionsticky"><a href="/map">視聴覚室</a></td>
@@ -57,11 +57,7 @@
           <tr class="clearfix">
             <th rowspan="12" class="time-timel">9:00</th>
             <td></td>
-            <td rowspan="8" class="time-event-left">
-              <span class="time-start">9:00~</span>
-              <a href="/ongakukai">個人演奏Ⅰ</a>
-              <span class="time-end">~9:40</span>
-            </td>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -78,19 +74,24 @@
             <td></td>
             <td></td>
             <td></td>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
             <td></td>
           </tr>
           <tr>
             <td></td>
             <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td rowspan="5" class="time-event">
+              <span class="time-start">9:15~</span>
+              <a href="/ongakukai">個人演奏Ⅰ</a>
+              <span class="time-end">~9:40</span>
+            </td>
             <td></td>
             <td></td>
             <td></td>
