--- a/views/map.erb
+++ b/views/map.erb
@@ -361,3 +361,60 @@
         selectedButton.style.backgroundColor = 'lightblue';
     }
 </script>
+<style>
+        html{
+            scroll-behavior: smooth;
+        }
+        .gotop{
+            display: block;
+            width: 60px;
+            height: 60px;
+            box-sizing: border-box;
+            background: #FFF;
+            border: 1px solid #999;
+            padding-top: 30px;
+            text-align: center;
+            letter-spacing: -1px;
+            font-size: 85%;
+            text-decoration: none;
+            color: #333;
+            opacity: 0.5;
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            z-index: 10000;
+        }
+        .gotop::before{
+            content: "";
+            display: block;
+            border-top: 2px solid #333;
+            border-right: 2px solid #333;
+            width: 25%;
+            height: 25%;
+            top: 25%;
+            left: 0;
+            right: 0;
+            margin: auto;
+            position: absolute;
+            transform: rotate(-45deg);
+        }
+        .gotop:hover{
+            opacity: 1;
+        }
+        @media(max-width:750px){
+            .gotop{
+                width: 40px;
+                height: 40px;
+                text-indent: -9999px;
+                opacity: 1;
+                border: none;
+                background: none;
+                bottom: 10px;
+                right: 10px;
+            }
+            .gotop::before{
+                bottom: 0;
+            }
+        }
+        </style>
+        <a href="#" class="gotop">トップへ</a>
