--- a/views/member.erb
+++ b/views/member.erb
@@ -68,17 +68,17 @@
         }
         .gotop{
             display: block;
-            width: 60px;
-            height: 60px;
+            width: 50px;
+            height: 50px;
             box-sizing: border-box;
-            background: #FFF;
-            border: 1px solid #999;
+            background: rgba(10,60,180);
+            border-radius: 25px;
             padding-top: 30px;
             text-align: center;
             letter-spacing: -1px;
             font-size: 85%;
             text-decoration: none;
-            color: #333;
+            color: #ffffff;
             opacity: 0.5;
             position: fixed;
             bottom: 20px;
@@ -88,11 +88,11 @@
         .gotop::before{
             content: "";
             display: block;
-            border-top: 2px solid #333;
-            border-right: 2px solid #333;
-            width: 25%;
-            height: 25%;
-            top: 25%;
+            border-top: 4px solid #ffffff;
+            border-right: 4px solid #ffffff;
+            width: 40%;
+            height: 40%;
+            top: 40%;
             left: 0;
             right: 0;
             margin: auto;
@@ -118,7 +118,7 @@
             }
         }
         </style>
-        <a href="#" class="gotop">トップへ</a>
+        <a href="#" class="gotop"></a>
 
     </div>
   </body>
