--- a/views/circle.erb
+++ b/views/circle.erb
@@ -129,7 +129,7 @@
                 開催場所
               </div>
               <li>
-                <p class="daiya"></p><p class="member-name">3-A 3-B</p>
+                <p class="daiya"></p><p class="member-name">3-B 3-C</p>
               </li>
             </ul>
             </div>
