--- a/views/map.erb
+++ b/views/map.erb
@@ -115,6 +115,16 @@
                                     <h3 class="circle_p_name red"><span>A-3</span></h3>
                                     </div>
                                 </div>
+                                <div class="map-element" style="top: 0px;left: 64.6%;width: 2.5%;height: 16%;">
+                                    <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ</div>
+                                    <div class="map-toilet-name">
+                                    </div>
+                                </div>
+                                <div class="map-element" style="top: 0px;left: 11.7%;width: 2.5%;height: 16%;">
+                                    <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ</div>
+                                    <div class="map-toilet-name">
+                                    </div>
+                                </div>
                                 <div class="map-element" style="left: 35.294117647058826%;width: 11.764705882352942%; height: 16%;">
                                     <div class="map-link-room">3-C</div>
                                     <div class="map-link-name">
@@ -159,6 +169,21 @@
                                 南3F
                             </div>
                         </div>
+                                <div class="map-element" style="top: 0px;left: 64.6%;width: 2.5%;height: 16%;">
+                                    <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ</div>
+                                    <div class="map-toilet-name">
+                                    </div>
+                                </div>
+                                <div class="map-element" style="top: 0px;left: 11.7%;width: 2.5%;height: 16%;">
+                                    <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ</div>
+                                    <div class="map-toilet-name">
+                                    </div>
+                                </div>
+                                <div class="map-element" style="bottom: 5%;left: 64.6%;width: 2.5%;height: 16%;">
+                                    <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ</div>
+                                    <div class="map-link-name">
+                                    </div>
+                                </div>
                                 <div class="map-element" style="top: 0px;left: 23.5294%;width: 11.7647%;height: 16%;">
                                     <div class="map-link-room">2-D</div>
                                     <div class="map-link-name">
@@ -202,7 +227,7 @@
                                     <h3 class="circle_p_name red"><span>A-2</span></h3>
                                     </div>
                                 </div>
-                                <div class="map-element" style="bottom: 0px;left: 88.2353%;width: 11.7647%;height: 21%;">
+                                <div class="map-element" style="bottom: 5%;left: 88.2353%;width: 11.7647%;height: 16%;">
                                     <div class="map-link-room">図書室</div>
                                     <div class="map-link-name">
                                     <h3 class="circle_p_name yellow"><span>C-6</span></h3>
@@ -228,6 +253,21 @@
                                 南4F
                             </div>
                         </div>
+                                <div class="map-element" style="top: 0px;left: 64.6%;width: 2.5%;height: 16%;">
+                                    <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ</div>
+                                    <div class="map-toilet-name">
+                                    </div>
+                                </div>
+                                <div class="map-element" style="top: 0px;left: 11.7%;width: 2.5%;height: 16%;">
+                                    <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ</div>
+                                    <div class="map-toilet-name">
+                                    </div>
+                                </div>
+                                <div class="map-element" style="bottom: 5%;left: 64.6%;width: 2.5%;height: 16%;">
+                                    <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ</div>
+                                    <div class="map-link-name">
+                                    </div>
+                                </div>
                                 <div class="map-element" style="top: 0px;left: 23.5294%;width: 11.7647%;height: 16%;">
                                     <div class="map-link-room">1-D</div>
                                     <div class="map-link-name">
@@ -270,10 +310,10 @@
                                 <div class="map-element" style="bottom: 5%;left: 41.1765%;width: 17.6471%;height: 16%;">
                                     <div class="map-link-room">世界史教室</div>
                                     <div class="map-link-name">
-                                    <h3 class="circle_p_name yellow"><span>C-11</span></h3>
+                                    <h3 class="circle_long_element yellow"><span class="long-element">C-11</span></h3>
                                     </div>
                                 </div>
-                                <div class="map-element" style="bottom: 0px;left: 88.2353%;width: 11.7647%;height: 21%;">
+                                <div class="map-element" style="bottom: 5%;left: 88.2353%;width: 11.7647%;height: 16%;">
                                     <div class="map-link-room">美術教室</div>
                                     <div class="map-link-name">
                                     <h3 class="circle_p_name yellow"><span>C-2</span></h3>
@@ -294,6 +334,11 @@
                         <div class="map-image">
                             <img src="/assets/images/map/5.webp" class="each-map">
                             <div class="booth-container">
+                            <div class="map-element" style="bottom: 5%;left: 64.6%;width: 2.5%;height: 16%;">
+                                    <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ</div>
+                                    <div class="map-link-name">
+                                    </div>
+                                </div>
                             <div class="map-element" style="bottom: 5%;left: 29.4118%;width: 11.7647%;height: 16%;">
                                     <div class="map-link-room">物理講義室</div>
                                     <div class="map-link-name">
