--- a/public/assets/css/map.css
+++ b/public/assets/css/map.css
@@ -168,6 +168,20 @@
     justify-content: space-around;
     padding-left: 8px;
 }
+.map-toilet-room{
+    overflow: hidden;
+    font-size: 10px;
+    border-top: none;
+    border-left: none;
+    text-align: center;
+}
+.map-bottom-toilet-room{
+    overflow: hidden;
+    font-size: 7px;
+    border-top: none;
+    border-left: none;
+    text-align: center;
+}
 @media screen and (min-width: 481px){
     .button-container {
         display: flex;
