サークル画像二枚追加

--- a/views/circle.erb
+++ b/views/circle.erb
@@ -643,7 +643,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/keion.webp" class="circle-img">
+              <img src="/assets/images/circle/keion.png" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
