--- a/views/kissa.erb
+++ b/views/kissa.erb
@@ -24,7 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/kissa.webpS" alt="喫茶">
+         <img src="/assets/images/circle/kissa.webp" alt="喫茶">
       </div>
       <h1 class="circle-name">
         喫茶
