--- a/views/map.erb
+++ b/views/map.erb
@@ -380,6 +380,14 @@
             <%# <button class="button" onclick="showDiv(6)" id="button6">運動場</button> %>
             </div>
         </div>
+        <h3 class="circle_p_name red"><span>A-1</span></h3>音楽会
+        <h3 class="circle_p_name red"><span>A-2</span></h3>縁日
+        <h3 class="circle_p_name red"><span>A-3</span></h3>高校入試
+        <h3 class="circle_p_name red"><span>A-4</span></h3>喫茶
+        <h3 class="circle_p_name red"><span>A-5</span></h3>屋台
+        <h3 class="circle_p_name red"><span>A-6</span></h3>運動場企画
+        <h3 class="circle_p_name red"><span>A-6</span></h3>ジェットコースター
+        <h3 class="circle_p_name red"><span>A-6</span></h3>脱出ゲーム
         </div>
       </div>
     </div>
