--- a/views/map.erb
+++ b/views/map.erb
@@ -380,14 +380,38 @@
             <%# <button class="button" onclick="showDiv(6)" id="button6">運動場</button> %>
             </div>
         </div>
-        <h3 class="circle_p_name red"><span>A-1</span></h3>音楽会
-        <h3 class="circle_p_name red"><span>A-2</span></h3>縁日
-        <h3 class="circle_p_name red"><span>A-3</span></h3>高校入試
-        <h3 class="circle_p_name red"><span>A-4</span></h3>喫茶
-        <h3 class="circle_p_name red"><span>A-5</span></h3>屋台
-        <h3 class="circle_p_name red"><span>A-6</span></h3>運動場企画
-        <h3 class="circle_p_name red"><span>A-6</span></h3>ジェットコースター
-        <h3 class="circle_p_name red"><span>A-6</span></h3>脱出ゲーム
+        <div class="display-flex"><h3 class="circle_p_name red"><span>A-1</span><p class="circle-d">音楽会</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name red"><span>A-2</span><p class="circle-d">縁日</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name red"><span>A-3</span><p class="circle-d">高校入試</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name red"><span>A-4</span><p class="circle-d">喫茶</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name red"><span>A-5</span><p class="circle-d">屋台</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name red"><span>A-6</span><p class="circle-d">運動場企画</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name red"><span>A-7</span><p class="circle-d">ジェットコースター</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name red"><span>A-8</span><p class="circle-d">脱出ゲーム</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name red"><span>A-9</span><p class="circle-d">校内謎解き</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name blue"><span>B-1</span><p class="circle-d">校内装飾</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name blue"><span>B-2</span><p class="circle-d">モニュメント</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name blue"><span>B-3</span><p class="circle-d">中央ステージ</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name blue"><span>B-4</span><p class="circle-d">家庭科展示</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name yellow"><span>C-1</span><p class="circle-d">写真部</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name yellow"><span>C-2</span><p class="circle-d">美術部</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name yellow"><span>C-3</span><p class="circle-d">将棋部</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name yellow"><span>C-4</span><p class="circle-d">物理部</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name yellow"><span>C-5</span><p class="circle-d">地歴部</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name yellow"><span>C-6</span><p class="circle-d">文芸部＆図書委員</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name yellow"><span>C-7</span><p class="circle-d">天文部</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name yellow"><span>C-8</span><p class="circle-d">化学部</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name yellow"><span>C-9</span><p class="circle-d">ESS部</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name yellow"><span>C-10</span><p class="circle-d">生物部</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name yellow"><span>C-11</span><p class="circle-d">アンサンブル部</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name green"><span>D-1</span><p class="circle-d">PC同好会</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name green"><span>D-2</span><p class="circle-d">VRジェットコースター（PC）</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name green"><span>D-3</span><p class="circle-d">数学同好会</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name green"><span>D-4</span><p class="circle-d">奇術同好会</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name green"><span>D-5</span><p class="circle-d">鉄道同好会</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name green"><span>D-6</span><p class="circle-d">旅行同好会</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name green"><span>D-7</span><p class="circle-d">スプラトゥーン同好会</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name green"><span>D-8</span><p class="circle-d">軽音同好会</p></h3></div>
         </div>
       </div>
     </div>
