--- a/views/seibutubu.erb
+++ b/views/seibutubu.erb
@@ -31,7 +31,7 @@
       </h1>
       <div class="circles-location">
          <span class="meta-title">開催場所：</span>
-         <span class="meta-loc">生物室室</span>
+         <span class="meta-loc">生物実験室</span>
          <a href="/map" class="meta-button">マップ上で確認</a>
       </div>
    </div>
