--- a/views/tennmonnbu.erb
+++ b/views/tennmonnbu.erb
@@ -11,3 +11,19 @@
     }
   });
 </script>
+<div class="circle-main">
+   <div class="circle-top">
+      <div class="circle-images">
+         <img src="/assets/images/circle/tenmon.webp" alt="天文部">
+      </div>
+      <p class="circle-name">
+        天文部
+      </p>
+      <div class="circles-location">
+         <span class="meta-title">開催場所：</span>
+         <span class="meta-loc">1-C</span>
+         <a href="/map" class="meta-button">マップ上で確認</a>
+      </div>
+   </div>
+     <p class="circle-text"></p>
+</div>
