--- a/views/timetable.erb
+++ b/views/timetable.erb
@@ -100,9 +100,9 @@
         <table class="time-table">
           <tr>
             <th class="time-nonl positionsticky"></th>
-            <td class="time-title positionsticky"><a href="/map">物理講義室</a></td>
             <td class="time-title positionsticky" ><a href="/map">講堂</a></td>
             <td class="time-title positionsticky"><a href="/map">中央<br>ステージ</a></td>
+            <td class="time-title positionsticky"><a href="/map">物理講義室</a></td>
             <td class="time-title positionsticky"><a href="/map">バンド</a></td>
             <td class="time-title positionsticky"><a href="/map" id="time-small">ルーム<br>コンサート<br><small>(アンサンブル部)</small></a></td>
             <td class="time-title positionsticky"><a href="/map">2A<br>脱出ゲーム</a></td>
@@ -143,12 +143,12 @@
             <td></td>
           </tr>
           <tr>
-            <td></td>
             <td rowspan="5" class="time-event">
               <span class="time-start">9:15~</span>
               <a href="/ongakukai">個人演奏Ⅰ</a>
               <span class="time-end">~9:40</span>
             </td>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -175,12 +175,12 @@
           </tr>
           <!-- 9:30 -->
           <tr>
+            <td></td>
             <td rowspan="6" class="time-event">
               <span class="time-start">9:30~</span>
               <span class="time-end">~10:00</span>
               <a href="/pcdoukoukai">chatGPTを使った<br>プログラミング実演</a>
             </td>
-            <td></td>
             <td></td>
             <td></td>
             <td rowspan="8" class="time-event">
@@ -207,9 +207,9 @@
             <td></td>
           </tr>
           <tr>
-            <td rowspan="5" class="time-event-left">
-              <span class="time-start">9:45~</span>
-              <span class="time-end">~10:10</span>
+            <td rowspan="4" class="time-event-left">
+              <span class="time-start">9:43~</span>
+              <span class="time-end">~10:05</span>
               <a href="/ongakukai">1年クラス合唱</a></td>
             <td></td>
             <td></td>
@@ -250,6 +250,7 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
           </tr>
           <tr>
             <td></td>
@@ -260,10 +261,9 @@
             <td></td>
           </tr>
           <tr>
-            <td></td>
-            <td rowspan="9" class="time-event">
-              <span class="time-start">10:15~</span>
-              <span class="time-end">~11:00</span>
+            <td rowspan="4" class="time-event">
+              <span class="time-start">10:12~</span>
+              <span class="time-end">~10:35</span>
               <a href="/ongakukai">個人演奏Ⅱ</a>
             </td>
             <td></td>
@@ -292,6 +292,7 @@
           </tr>
           <!-- 10:30 -->
           <tr>
+            <td></td>
             <td rowspan="6" class="time-event">
               <span class="time-start">10:30~</span>
               <span class="time-end">~11:00</span>
@@ -300,7 +301,6 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
           </tr>
           <tr>
             <td></td>
@@ -309,6 +309,11 @@
             <td></td>
           </tr>
           <tr>
+          <td rowspan="6" class="time-event">
+              <span class="time-start">10:41~</span>
+              <span class="time-end">~11:11</span>
+              <a href="/ongakukai">2年クラス合唱</a>
+            </td>
             <td></td>
             <td></td>
             <td></td>
@@ -341,7 +346,7 @@
           <!-- 11:00 -->
           <tr>
             <th rowspan="12" class="time-timel">11:00</th>
-            <td></td>
+
             <td></td>
             <td></td>
             <td></td>
@@ -359,10 +364,6 @@
           </tr>
           <tr>
             <td></td>
-            <td rowspan="6" class="time-event-left">
-              <span class="time-start">11:05~</span>
-              <span class="time-end">~11:35</span>
-              <a href="/ongakukai">2年クラス合唱</a></td>
             <td></td>
             <td></td>
             <td></td>
@@ -376,6 +377,10 @@
             <td></td>
           </tr>
           <tr>
+            <td rowspan="10" class="time-event-left">
+              <span class="time-start">11:18~</span>
+              <span class="time-end">~12:16</span>
+              <a href="/ongakukai">個人演奏Ⅲ</a></td>
             <td></td>
             <td></td>
             <td></td>
@@ -400,11 +405,12 @@
           </tr>
           <!-- 11:30 -->
           <tr>
-            <td></td>
             <td rowspan="2" class="time-event">
               <span class="time-start">11:30~</span>
               <span class="time-end">~11:40</span>
-              <a href="/tyuuou">新時代</a></td>
+              <a href="/tyuuou">新時代</a>
+            </td>
+            <td></td>
             <td rowspan="4" class="time-event">
               <span class="time-start">11:30~</span>
               <span class="time-end">~11:50</span>
@@ -421,11 +427,6 @@
             <td></td>
           </tr>
           <tr>
-            <td></td>
-            <td rowspan="7" class="time-event-left">
-              <span class="time-start">11:40~</span>
-              <span class="time-end">~12:15</span>
-              <a href="/ongakukai">個人演奏Ⅲ</a></td>
             <td rowspan="2" class="time-event">
               <span class="time-start">11:40~</span>
               <span class="time-end">~11:50</span>
@@ -443,8 +444,8 @@
             <td></td>
           </tr>
           <tr>
-            <td></td>
             <td rowspan="4" class="time-event"><span class="time-start">11:50~</span><a href="/kizyutudoukoukai">マジック</a><span class="time-end">~12:10</span></td>
+            <td></td>
             <td></td>
             <td></td>
             <td rowspan="8" class="time-event">
@@ -493,10 +494,9 @@
             <td></td>
           </tr>
           <tr>
-            <td></td>
-            <td rowspan="4" class="time-event-left">
-              <span class="time-start">12:20~</span>
-              <span class="time-end">~12:40</span>
+            <td rowspan="6" class="time-event-left">
+              <span class="time-start">12:19~</span>
+              <span class="time-end">~12:49</span>
               <a href="/ongakukai">3年クラス合唱</a></td>
             <td></td>
             <td></td>
@@ -537,7 +537,6 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
             <td rowspan="8" class="time-event">
               <span class="time-start">12:40~</span>
               <span class="time-end">~13:20</span>
@@ -548,11 +547,6 @@
               <a href="/dassyutu">とある<br>秘密倉庫からの脱出<br>4</a></td>
           </tr>
           <tr>
-            <td></td>
-            <td rowspan="4" class="time-event-left">
-              <span class="time-start">12:45~</span>
-              <span class="time-end">~13:05</span>
-              <a href="/guri">グリー部</a></td>
             <td></td>
             <td></td>
             <td></td>
@@ -575,15 +569,22 @@
           <!-- 13:00 -->
           <tr>
             <th rowspan="12" class="time-timel">13:00</th>
+            
+            <td rowspan="3" class="time-event-left">
+              <span class="time-start">12:57~</span>
+              <span class="time-end">~13:12</span>
+              <a href="/guri">グリー部</a>
+            </td>
+            <td rowspan="2" class="time-event">
+              <span class="time-start">13:00~</span>
+              <span class="time-end">~13:10</span>
+              <a href="/tyuuou">快晴</a>
+            </td>
             <td rowspan="6" class="time-event">
               <span class="time-start">13:00~</span>
               <span class="time-end">~13:30</span>
               <a href="/pcdoukoukai">アルゴリズム講義</a>
             </td>
-            <td rowspan="2" class="time-event">
-              <span class="time-start">13:00~</span>
-              <span class="time-end">~13:10</span>
-              <a href="/tyuuou">快晴</a></td>
             <td></td>
             <td></td>
             <td></td>
@@ -598,7 +599,6 @@
             <td></td>
           </tr>
           <tr>
-            <td></td>
             <td rowspan="4" class="time-event">
               <span class="time-start">13:10~</span>
               <span class="time-end">~13:30</span>
@@ -615,10 +615,7 @@
             <td></td>
           </tr>
           <tr>
-            <td rowspan="3" class="time-event">
-              <span class="time-start">13:20~</span>
-              <span class="time-end">~13:35</span>
-              <a href="/annsannburubu">アンサンブル部</a></td>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -636,11 +633,15 @@
           </tr>
           <!-- 13:30 -->
           <tr>
-            <td></td>
+            <td rowspan="3" class="time-event">
+              <span class="time-start">13:30~</span>
+              <span class="time-end">~13:45</span>
+              <a href="/annsannburubu">アンサンブル部</a></td>
             <td rowspan="2" class="time-event">
               <span class="time-start">13:30~</span>
               <span class="time-end">~13:40</span>
               <a href="/tyuuou">点描の歌</a></td>
+            <td></td>
             <td></td>
             <td></td>
             <td rowspan="8" class="time-event">
@@ -662,17 +663,17 @@
           </tr>
           <tr>
             <td></td>
-            <td rowspan="4" class="time-event-left">
-              <span class="time-start">13:40~</span>
-              <span class="time-end">~14:00</span>
-              <a href="/ongakukai">表彰式</a></td>
             <td></td>
             <td></td>
             <td></td>
             <td></td>
           </tr>
           <tr>
-            <td></td>
+            <td rowspan="3" class="time-event-left">
+              <span class="time-start">13:45~</span>
+              <span class="time-end">~14:00</span>
+              <a href="/ongakukai">表彰式</a>
+            </td>
             <td></td>
             <td></td>
             <td></td>
@@ -695,16 +696,17 @@
           <!-- 14:00 -->
           <tr>
             <th rowspan="12" class="time-timel time-bot">14:00</th>
+            <td></td>
+            <td rowspan="2" class="time-event">
+              <span class="time-start">14:00~</span>
+              <span class="time-end">~14:10</span>
+              <a href="/tyuuou">DNA</a>
+            </td>
             <td rowspan="6" class="time-event">
               <span class="time-start">14:00~</span>
               <span class="time-end">~14:30</span>
               <a href="/pcdoukoukai">chatGPTを使った<br>プログラミング実演</a>
             </td>
-            <td></td>
-            <td rowspan="2" class="time-event">
-              <span class="time-start">14:00~</span>
-              <span class="time-end">~14:10</span>
-              <a href="/tyuuou">DNA</a></td>
             <td></td>
             <td></td>
             <td rowspan="4" class="time-event">
@@ -756,7 +758,6 @@
           </tr>
           <!-- 14:30 -->
           <tr>
-            <td></td>
             <td></td>
             <td rowspan="2" class="time-event">
               <span class="time-start">14:30~</span>
