--- a/views/timetable.erb
+++ b/views/timetable.erb
@@ -772,7 +772,7 @@
             <td rowspan="2" class="time-event">
               <span class="time-start">14:30~</span>
               <span class="time-end">~14:40</span>
-              <a href="/tyuuou">アイドル<br>パフォーマンス</a></td>
+              <a href="/tyuuou">B小町</a></td>
             <td></td>
             <td></td>
             <td></td>
