--- a/views/index.erb
+++ b/views/index.erb
@@ -132,6 +132,14 @@
     <li>講堂では携帯電話等の電源をお切りください。</li>
   </ul>
 </div>
+<p class="countdown-p">NEWS</p>
+    <div class="count">
+        <div class="count-div2">
+            <div class="count-countdown">
+            <span id="countdown1"></span>
+            </div>
+        </div>
+      </div>
 
 </div>
 <script>
