スマホ用修正

--- a/views/index.erb
+++ b/views/index.erb
@@ -135,7 +135,7 @@
 <p class="countdown-p">NEWS</p>
     <div class="count">
         <div class="count-div2">
-            <div class="count-countdown">
+            <div class="count-countdown1">
             <span id="countdown1"></span>
             </div>
         </div>
