--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -283,9 +283,22 @@ html,body{
   font-size: 34px;
 }
 .count{
-  width:100%;
+  width: 100%;
 }
 #countdown1{
-font-size: 34px;
+font-size: 20px;
+text-align: center;
+}
+.count-countdown1 {
+  font-size: 20px;
+  color: #05c8e6;
+  width: 600px;
+  height: 100px;
+  text-align: center;
+  position: absolute;
+  top: 20%;
+  left: 25%;
+  transform: translate(-50%,-50%);
+  text-shadow: #d9d9d9 0 0 10px;
 }
 }
