トイレの位置変更

--- a/views/index.erb
+++ b/views/index.erb
@@ -115,8 +115,8 @@
   </ul>
   <h1>お手洗い</h1>
   <ul>
-    <li> 男性用お手洗いは南館全階西側、北館二、四階および講堂にございます。 </li>
-    <li> 女性用お手洗いは南館全階東側、北館三階および講堂、ピロティにございます。 </li>
+    <li> 男性用お手洗いは南館全階西側、北館三階および講堂にございます。 </li>
+    <li> 女性用お手洗いは南館全階東側、北館二、四階および講堂、ピロティにございます。 </li>
     <li> 北館一階のお手洗いは教職員・来賓専用のため、ご利用になれません。 </li>
   </ul>
   <h1>金券販売</h1>
