--- a/views/index.erb
+++ b/views/index.erb
@@ -94,8 +94,9 @@
     </div>
 
     <div class="date">
-     <p class="main-date">9.23</p>
-     <p class="sub-date">9:00~15:00</p>
+     <%# <p class="main-date">9.23</p>
+     <p class="sub-date">9:00~15:00</p> %>
+     <img src="/assets/images/date.webp" class="date">
     </div>
 <div class="count">
   <div class="count-div1">
