--- a/views/layout.erb
+++ b/views/layout.erb
@@ -94,7 +94,7 @@
           <%= yield %>
         <footer>
             <img src="/assets/images/footer2.webp" class="footer-logo">
-            <div id="footer-title">第76回 音楽と展覧の会 "New ERA"</div>
+            <div id="footer-title">第76回 音楽と展覧の会 <br>"New ERA"</div>
             <div class="footer-icon">
                 <a href="https://twitter.com/koyo_onten2023?s=21&t=cGq-MroAXlsBhwLM7vG1lA" class="icon"><i class="fa-brands fa-x-twitter snsicon"></i>
                   <span class="sns-link-text">@koyo_onten2023</span>
