--- a/views/map.erb
+++ b/views/map.erb
@@ -184,6 +184,13 @@
                                     <div class="map-link-name">
                                     </div>
                                 </div>
+                                <div class="map-element" style="top: 0px;left: 0%;width: 11.7647%;height: 16%;">
+                                    <div class="map-link-room">2-D</div>
+                                    <div class="map-link-name">
+                                    <h3 class="circle_p_name yellow"><span>C-3</span></h3>
+                                    </div>
+                                </div>
+                                
                                 <div class="map-element" style="top: 0px;left: 23.5294%;width: 11.7647%;height: 16%;">
                                     <div class="map-link-room">2-D</div>
                                     <div class="map-link-name">
@@ -285,7 +292,7 @@
                                     <div class="map-link-room">1-B</div>
                                     <div class="map-link-name">
                                     <h3 class="circle_p_name green"><span>D-6</span></h3>
-                                    <h3 class="circle_p_name yellow"><span>C-3</span></h3>
+                                    
                                     </div>
                                 </div>
                                 <div class="map-element" style="top: 0px;left: 70.5882%;width: 11.7647%;height: 16%;">
@@ -380,8 +387,8 @@
             <%# <button class="button" onclick="showDiv(6)" id="button6">運動場</button> %>
             </div>
         </div>
-        <div class="display-flex"><h3 class="circle_p_name red"><span>A-1</span><p class="circle-d">音楽会</p></h3></div>
-        <div class="display-flex"><h3 class="circle_p_name red"><span>A-2</span><p class="circle-d">縁日</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name red"><span>A-1</span><p class="circle-d">音楽会</p><p class="place">講堂</p></h3></div>
+        <div class="display-flex"><h3 class="circle_p_name red"><span>A-2</span><p class="circle-d">縁日</p><p class="place">合併教室</p></h3></div>
         <div class="display-flex"><h3 class="circle_p_name red"><span>A-3</span><p class="circle-d">高校入試</p></h3></div>
         <div class="display-flex"><h3 class="circle_p_name red"><span>A-4</span><p class="circle-d">喫茶</p></h3></div>
         <div class="display-flex"><h3 class="circle_p_name red"><span>A-5</span><p class="circle-d">屋台</p></h3></div>
