--- a/views/map.erb
+++ b/views/map.erb
@@ -27,7 +27,7 @@
         }
 
         .button {
-            border:3px solid gray;
+            /* border:3px solid gray; */
         }
 
         .map-content {
@@ -378,7 +378,11 @@
                     </div>
                 </div> %>
             </div>
+            <div style="text-align:center">
+            <p class="exp">下のパネルでマップ切り替え</p>
+            </div>
             <div class="button-container">
+            
             <button class="button" onclick="showDiv(1)" id="button1">南1F</button>
             <button class="button" onclick="showDiv(2)" id="button2">南2F/北1F</button>
             <button class="button" onclick="showDiv(3)" id="button3">南3F/北2F</button>
