--- a/views/index.erb
+++ b/views/index.erb
@@ -31,7 +31,7 @@
       </div>
       <div class="image">
         <img src="/assets/images/logo_white.webp" class="logo">
-        <img src="/assets/images/logo_background.gif" class="logo-gif">
+        <%# <img src="/assets/images/logo_background.gif" class="logo-gif"> %>
         <style>
         html{
             scroll-behavior: smooth;
