トイレに性別追加

--- a/views/map.erb
+++ b/views/map.erb
@@ -116,12 +116,12 @@
                                     </div>
                                 </div>
                                 <div class="map-element" style="top: 0px;left: 64.6%;width: 2.5%;height: 16%;">
-                                    <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ</div>
+                                    <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ男</div>
                                     <div class="map-toilet-name">
                                     </div>
                                 </div>
                                 <div class="map-element" style="top: 0px;left: 11.7%;width: 2.5%;height: 16%;">
-                                    <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ</div>
+                                    <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ女</div>
                                     <div class="map-toilet-name">
                                     </div>
                                 </div>
@@ -170,17 +170,17 @@
                             </div>
                         </div>
                                 <div class="map-element" style="top: 0px;left: 64.6%;width: 2.5%;height: 16%;">
-                                    <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ</div>
+                                    <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ男</div>
                                     <div class="map-toilet-name">
                                     </div>
                                 </div>
                                 <div class="map-element" style="top: 0px;left: 11.7%;width: 2.5%;height: 16%;">
-                                    <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ</div>
+                                    <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ男</div>
                                     <div class="map-toilet-name">
                                     </div>
                                 </div>
                                 <div class="map-element" style="bottom: 5%;left: 64.6%;width: 2.5%;height: 16%;">
-                                    <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ</div>
+                                    <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ女</div>
                                     <div class="map-link-name">
                                     </div>
                                 </div>
@@ -261,17 +261,17 @@
                             </div>
                         </div>
                                 <div class="map-element" style="top: 0px;left: 64.6%;width: 2.5%;height: 16%;">
-                                    <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ</div>
+                                    <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ男</div>
                                     <div class="map-toilet-name">
                                     </div>
                                 </div>
                                 <div class="map-element" style="top: 0px;left: 11.7%;width: 2.5%;height: 16%;">
-                                    <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ</div>
+                                    <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ女</div>
                                     <div class="map-toilet-name">
                                     </div>
                                 </div>
                                 <div class="map-element" style="bottom: 5%;left: 64.6%;width: 2.5%;height: 16%;">
-                                    <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ</div>
+                                    <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ女</div>
                                     <div class="map-link-name">
                                     </div>
                                 </div>
@@ -342,7 +342,7 @@
                             <img src="/assets/images/map/5.webp" class="each-map">
                             <div class="booth-container">
                             <div class="map-element" style="bottom: 5%;left: 64.6%;width: 2.5%;height: 16%;">
-                                    <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ</div>
+                                    <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ女</div>
                                     <div class="map-link-name">
                                     </div>
                                 </div>
