--- a/views/jetto.erb
+++ b/views/jetto.erb
@@ -35,6 +35,8 @@
          <a href="/map" class="meta-button">マップ上で確認</a>
       </div>
    </div>
-   <p class="circle-text">僕たちは多大な苦難を乗り越えながら夏休みも毎日作業をして仲間と協力することで完成させることができました。</p><p class="circle-text">今回の音展の目玉、ジェットコースターにぜひみなさん乗ってみてください</p>
+   <p class="circle-text">僕たちは多大な苦難を乗り越えながら夏休みも毎日作業をして仲間と協力することで完成させることができました。</p><p class="circle-text">今回の音展の目玉、ジェットコースターにぜひみなさん乗ってみてください<br>※整理券制です。
+2D教室前で受付をしてください<br>〘参加方法〙
+参加するには実施教室前にある受付で予約してください</p>
 
 </div>
