--- a/views/map.erb
+++ b/views/map.erb
@@ -185,7 +185,7 @@
                                     </div>
                                 </div>
                                 <div class="map-element" style="top: 0px;left: 0%;width: 11.7647%;height: 16%;">
-                                    <div class="map-link-room">2-D</div>
+                                    <div class="map-link-room">日本史教室</div>
                                     <div class="map-link-name">
                                     <h3 class="circle_p_name yellow"><span>C-3</span></h3>
                                     </div>
