寝ます 明日は頑張りましょう

--- a/views/timetable.erb
+++ b/views/timetable.erb
@@ -30,6 +30,10 @@
         document.querySelectorAll(".time-first.timetable-small")[0].style.display = "none"
         document.querySelectorAll(".time-first.timetable-big")[0].style.display = "block"
       }
+      window.addEventListener('DOMContentLoaded', function() {
+        document.querySelectorAll(".time-first.timetable-small")[0].style.display = "block"
+        document.querySelectorAll(".time-first.timetable-big")[0].style.display = "none"
+      });
     </script>
 <div class="title-main">
     <img src="/assets/images/titles/timetable.webp" class="title-img">
