--- a/views/vr.erb
+++ b/views/vr.erb
@@ -35,6 +35,6 @@
          <a href="/map" class="meta-button">マップ上で確認</a>
       </div>
    </div>
-     <p class="circle-text">VRコースターは学校の３Dモデルの中をジェットコースターで走り回る物です。昨年のものよりパワーアップして帰ってきたジェットコースターをぜひ体験してください。今回は学校の細部の表現をこだわっただけでなく、風の音や花火を作ったので心に余裕のある方は注目してみてください。</p>
+     <p class="circle-text">VRコースターは学校の３Dモデルの中をジェットコースターで走り回る物です。昨年のものよりパワーアップして帰ってきたジェットコースターをぜひ体験してください。</p>
      <p class="vr-text">※酔いやすいためご注意ください<p>
 </div>
